syntax = "proto3";

option java_package = "org.rajeshdyadav.gprc.calculator";
option java_outer_classname = "CalculatorProto";

service CalculatorService {
    rpc Add(AddRequest) returns (AddResponse);
    rpc Subtract(SubtractRequest) returns (SubtractResponse);
}

message AddRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message AddResponse {
    int32 result = 1;
}

message SubtractRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message SubtractResponse {
    int32 result = 1;
}